--- a/Nodes/CommDrivers/CommDrivers.yaml
+++ b/Nodes/CommDrivers/CommDrivers.yaml
@@ -1,2 +1,5 @@
 Name: CommDrivers
 Type: CommDriversCategoryFolder
+Children:
+- File: CODESYSDriver1/CODESYSDriver1.yaml
+- File: S7TCPDriver1/S7TCPDriver1.yaml
