--- a/Nodes/Model/Model.yaml
+++ b/Nodes/Model/Model.yaml
@@ -20,3 +20,38 @@ Children:
   DataType: Int32
 - File: VariabiliModelloPLC/VariabiliModelloPLC.yaml
 - File: VarPLC/VarPLC.yaml
+- Name: Variable4Transitioned
+  Type: VariableTransitionEventDispatcher
+  Children:
+  - Name: Value
+    Type: BaseVariableType
+    DataType: Double
+  - Name: Transition
+    Type: BaseVariableType
+    DataType: VariableTransition
+  - Name: VariableNodePath
+    Type: BaseVariableType
+    DataType: NodePath
+    Value: "../Variable4"
+- Name: Variable4RangeTransitioned
+  Type: VariableRangeTransitionEventDispatcher
+  Children:
+  - Name: From
+    Type: BaseVariableType
+    DataType: Double
+  - Name: To
+    Type: BaseVariableType
+    DataType: Double
+  - Name: Transition
+    Type: BaseVariableType
+    DataType: VariableRangeTransition
+  - Name: VariableNodePath
+    Type: BaseVariableType
+    DataType: NodePath
+    Value: "../Variable4"
+- Name: ArrayBool
+  Type: BaseDataVariableType
+  DataType: Boolean
+  ValueRank: OneDimension
+  ArrayDimensions: [10]
+- File: VarMotori/VarMotori.yaml
