--- a/Nodes/verona_sessione1_2024_06_21.yaml
+++ b/Nodes/verona_sessione1_2024_06_21.yaml
@@ -62,3 +62,4 @@ Children:
 - File: System/System.yaml
 - File: Translations/Translations.yaml
 - File: Retentivity/Retentivity.yaml
+- File: Eventi/Eventi.yaml
